// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`stack-deepness stack-deepness-deep-call should fail compilation 1`] = `
"<unknown>:15:21: Cannot evaluate expression to a constant: Execution stack reached maximum level
  14 |                 {
> 15 |                     {
                           ^
  16 |                         {
"
`;

exports[`stack-deepness stack-deepness-infinite-recursion should fail compilation 1`] = `
"<unknown>:6:12: Cannot evaluate expression to a constant: Execution stack reached maximum level
  5 | fun recurse(): Int {
> 6 |     return recurse();
                 ^~~~~~~~~
  7 | }
"
`;

exports[`stack-deepness stack-deepness-near-miss should pass compilation 1`] = `
[
  [
    "248",
    "Int",
  ],
  [
    "multiplyByTwo(248)",
    "Int",
  ],
  [
    "n",
    "Int",
  ],
  [
    "0",
    "Int",
  ],
  [
    "n < 0",
    "Bool",
  ],
  [
    "n",
    "Int",
  ],
  [
    "-n",
    "Int",
  ],
  [
    "multiplyByTwo(-n)",
    "Int",
  ],
  [
    "-multiplyByTwo(-n)",
    "Int",
  ],
  [
    "n",
    "Int",
  ],
  [
    "0",
    "Int",
  ],
  [
    "n == 0",
    "Bool",
  ],
  [
    "0",
    "Int",
  ],
  [
    "2",
    "Int",
  ],
  [
    "n",
    "Int",
  ],
  [
    "1",
    "Int",
  ],
  [
    "n - 1",
    "Int",
  ],
  [
    "multiplyByTwo(n - 1)",
    "Int",
  ],
  [
    "2 + multiplyByTwo(n - 1)",
    "Int",
  ],
]
`;

exports[`stack-deepness stack-deepness-near-miss-1 should fail compilation 1`] = `
"<unknown>:9:12: Cannot evaluate expression to a constant: Execution stack reached maximum level
   8 |         return -multiplyByTwo(-n);
>  9 |     } else if (n == 0) {
                  ^~~~~~~~~~~~~
  10 |         return 0;
"
`;

exports[`stack-deepness stack-deepness-near-miss-2 should fail compilation 1`] = `
"<unknown>:11:13: Cannot evaluate expression to a constant: Execution stack reached maximum level
  10 |         {
> 11 |             {
                   ^
  12 |                 return 0;
"
`;

exports[`stack-deepness stack-deepness-recursion should pass compilation 1`] = `
[
  [
    "200",
    "Int",
  ],
  [
    "multiplyByTwo(200)",
    "Int",
  ],
  [
    "n",
    "Int",
  ],
  [
    "0",
    "Int",
  ],
  [
    "n < 0",
    "Bool",
  ],
  [
    "n",
    "Int",
  ],
  [
    "-n",
    "Int",
  ],
  [
    "multiplyByTwo(-n)",
    "Int",
  ],
  [
    "-multiplyByTwo(-n)",
    "Int",
  ],
  [
    "n",
    "Int",
  ],
  [
    "0",
    "Int",
  ],
  [
    "n == 0",
    "Bool",
  ],
  [
    "0",
    "Int",
  ],
  [
    "2",
    "Int",
  ],
  [
    "n",
    "Int",
  ],
  [
    "1",
    "Int",
  ],
  [
    "n - 1",
    "Int",
  ],
  [
    "multiplyByTwo(n - 1)",
    "Int",
  ],
  [
    "2 + multiplyByTwo(n - 1)",
    "Int",
  ],
]
`;
